--- a/config/config.ini
+++ b/config/config.ini
@@ -1,10 +1,6 @@
 [nodes]
 node_hosts = [
-             '10.1.1.0/24', '10.1.2.0/24', '10.1.3.0/24', '10.1.4.0/24', '10.1.5.0/24',
-             '10.1.6.0/24', '10.1.7-8.0/24', '10.1.15.0/24', '10.1.16.0/24', '10.1.17-18.0/24',
-             '10.1.20.0/24','10.2.4.0/24','10.3.4.0/24','10.3.104-105.1-255', '192.168.122.0/24',
-             '10.6.5.0/24','10.4.4.1-47', '10.4.4.50-202', '10.4.4.204-255', '10.1.36-38.0/24',
-             '10.3.105.0/24'
+             '192.168.1.0/24', '10.10.1.0/24', '10.1.3.0/24'
              ]
 node_port = 9100
 #windows_node_port = 9182
@@ -15,7 +11,7 @@ nodes_file_backup_name = data/nodes.jsonbak
 agent_exclude_file = data/exclude_agents.txt
 
 [prome]
-url = https://prom.ctcfin.com/prome/api/v1/query?
+url = https://prom.demo.com/prome/api/v1/query?
 query_all_ip = query=up{job="nodes"}
 query_current_ip = query=node_virtual_type{job="nodes"}
 metric_filename = data/lost_nodes.prom
